# ALGO_exercices_python_tdd

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SOLUTIONS_README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: quality.yml  tests.yml
docs/: grille_evaluation.md  guide_enseignant.md
ex01_variables_conditions/: README.md
ex01_variables_conditions/src/: exercices.py
ex02_boucles_listes_dictionaire/: README.md
ex02_boucles_listes_dictionaire/src/: exercices.py
ex03_fonctions_algo/: README.md
ex03_fonctions_algo/src/: exercices.py
ex04_tri/src/: exercices.py
ex05_arbre_parcours/: README.md
ex05_arbre_parcours/src/: parcours.py
ex06_voyageur_commerce/: README.md
