[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo_bases"
version = "2.0.0"
description = "Exercices d'algorithmique en Python avec approche TDD"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.2",
    "matplotlib>=3.9.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "ex01_variables_conditions/tests",
  "ex02_boucles_listes_dictionaire/tests",
  "ex03_fonctions_algo/tests",
  "ex04_tri/tests",
  "ex05_arbre_parcours/tests",
  "ex06_voyageur_commerce/tests"
]
addopts = "-q"

[tool.ruff]
# Configuration Ruff (linter moderne Python)
line-length = 100
target-version = "py310"

# Sélection des règles
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignorer certaines règles pour les exercices (car code étudiant)
ignore = [
    "E501",   # line too long (géré par black)
    "B008",   # function calls in argument defaults
    "SIM108", # use ternary operator (trop avancé pour débutants)
]

# Exclure les dossiers
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    "out",
]

[tool.ruff.per-file-ignores]
# Les fichiers de tests peuvent avoir des imports non utilisés
"*/tests/*.py" = ["F401", "F811"]

[tool.black]
# Configuration Black (formateur de code)
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | out
)/
'''

[tool.mypy]
# Configuration mypy (type checking)
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Permettre fonctions non typées (exercices)
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Ignorer les modules sans stubs
ignore_missing_imports = true

# Exclure certains répertoires
exclude = [
    '^\.venv/',
    '^__pycache__/',
    '^\.pytest_cache/',
    '^\.mypy_cache/',
    '^out/',
]
